--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "expo": {
     "name": "Clinidata",
+    "newArchEnabled": true,
     "slug": "clinidata",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon3.png",
     "userInterfaceStyle": "light",
@@ -29,7 +30,7 @@
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE"
       ],
-      "versionCode": 1
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/images/icon3.png"
@@ -44,8 +45,9 @@
         "origin": false
       },
       "eas": {
-        "projectId": "4d3114a9-9071-47ed-9796-5a9776178ac6"
+        "projectId": "5a0bed7f-a675-4164-8ceb-6931b02f58a3"
       }
-    }
+    },
+    "owner": "cfarias"
   }
 }
