--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "start": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "android": "expo run:android",
@@ -18,19 +19,19 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.1",
     "date-fns": "^3.3.1",
-    "expo": "52.0.33",
+    "expo": "~52.0.38",
     "expo-blur": "^14.0.3",
-    "expo-constants": "^17.0.5",
-    "expo-document-picker": "~11.10.1",
-    "expo-file-system": "~16.0.8",
-    "expo-font": "^13.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.11",
+    "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
-    "expo-image": "~1.10.6",
+    "expo-image": "~2.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
-    "expo-router": "4.0.17",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "^0.29.21",
+    "expo-router": "~4.0.19",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "^2.0.1",
     "expo-system-ui": "^4.0.7",
     "expo-web-browser": "^14.0.2",
@@ -39,12 +40,12 @@
     "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.23.0",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
